# mwget

./: .gitignore  CMakeLists.txt
src/: httpplugin.cpp  mwget.cpp  task.cpp  task.h
